--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
       movement, <a href="https://learnenough.com/email">sign up for our official email list now.</a>
     </p>
     <p>
+    	<a href="http:twitter.com/learnenough" target="_blank" style="text-decoration: none;"><img src="images/small_twitter_logo.png"></a>you should follow Learn Enough on Twitter <a href="http://twitter.com/learnenough" target="_blank">here</a>
+    </p>
+    <p>
     	HTML was created by the original "Web Developer", computer scientist <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were
     </p>
+    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
 			<img src="images/kitten.jpg" alt="An adorable kitten">
+		</a>
     <h2>Background</h2>
     <p>
     	Learn Enough to Be Dangerous is an outgrowth of the <a href="https://railstutorial.org/">Ruby on Rails Tutorial</a> and the <a href="https://www.softcover.io">Softcover Publishing Platform</a>This page is part of the sample site for <a href="https://learnenough.com/html-tutorial"><em>Learn Enough HTML to Be Dangerous </em></a>, which teaches the basics of <strong>H</strong>yper<strong>T</strong>ext<strong>M</strong>arkup<strong>L</strong>anguage, the universal language of the World Wide Web. Other related tutorials can be found at <a href="https://learnenough.com/">learnenough.com</a>. 
