--- a/tags.html
+++ b/tags.html
@@ -65,20 +65,22 @@
 		<td><em>technical sophistication</em></td>
 		<tr>
 			<td><code>strong</code></td>
-			<td>semantic bold</td>
+			<td>strong</td>
+			<td>make strong text</td>
 			<td><code>&lt;strong&gt;create great things&lt;/strong&gt;</code></td>
 			<td><strong>create great things</strong></td>
 		</tr>
 		<tr>
-			<td>a</td>
-			<td>create link(s)</td>
+			<td><code>a</code></td>
+			<td>anchor</td>
+			<td>make hyperlink</td>
 			<td><code>&lt;a&gt;href="https://learnenough.com"&gt;Click to visit learn enough web site&lt;/a&gt;</code></td>
 			<td><a href="https://www.learnenough.com">Click to visit learn enough web site</a></td>
 		</tr>
 		<tr>
 			<td><code>img</code></td>
-			<td>creates link to images stored on a webserver or local computer</td>
-			<td><code>&lt;img&gt; src="images/kitten.jpg"&gt;</code></td>
+			<td>includes an image</td>
+			<td><code>&lt;img&gt; src="images/kitten.jpg" alt="twitter logo"&gt;</code></td>
 			<td><img src="images/small_twitter_logo.png"></td>
 		</tr>
 		<tr>
