--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
-	<head lang="en=us">
+<html lang="en-US">
+	<head>
 		<title>Sample_Website</title>
 		<meta charset="utf-8">
 	</head>
 	<body>
+		<div>
+			<a href="index.html">Home</a><br>
+			<a href="tags.html">HTML Tags</a>
+			<a href="moby_dick.html">Moby Dick</a><br>
+		</div>
 		<h1>The Learn Enough Story</h1>
     <p>
     	Learn Enough to Be Dangerous is a leader in the movement to teach
@@ -17,7 +22,7 @@
       movement, <a href="https://learnenough.com/email">sign up for our official email list now.</a>
     </p>
     <p>
-    	<a href="http:twitter.com/learnenough" target="_blank" style="text-decoration: none;"><img src="images/small_twitter_logo.png"></a>you should follow Learn Enough on Twitter <a href="http://twitter.com/learnenough" target="_blank">here</a>
+    	<a href="http://twitter.com/learnenough" target="_blank" style="text-decoration: none;"><img src="images/small_twitter_logo.png" alt="small twitter logo"></a>you should follow Learn Enough on Twitter <a href="http://twitter.com/learnenough" target="_blank">here</a>
     </p>
     <p>
     	HTML was created by the original "Web Developer", computer scientist <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were
