--- a/tags.html
+++ b/tags.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
 	<title>HTML Tags</title>
 	<meta charset="utf-8">
 </head>
 <body>
+	<div>
+			<a href="index.html">Home</a><br>
+			<a href="tags.html">HTML Tags</a>
+			<a href="moby_dick.html">Moby Dick</a><br>
+		</div>
+	<header>
 <h1>Important HTML tags</h1>
 <a href="https://www.flickr.com/photos/jdhancock/3814523970" target="_blank">
 <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
@@ -13,10 +18,16 @@
 <p>
 	This page is designed as a quick reference of some of the common HTML Tags we have covered in <a href="http://learnenough.com/html-tutorial"><em>Learn Enough HTML to Be Dangerous</em></a>. In the process of making it, we'll learn how to make HTML <em>tables</em> via <code>table</code> and related tags.
 </p>
+</header>
+<div>
 <p>
 	The tables below don't include all HTMl tags, but they do just many of the most important ones.
 </p>
+</div>
+<header>
 <h2>Block Elements</h2>
+</header>
+<div>
 <table>
 	<tr>
 		<th>Tag</th>
@@ -48,7 +59,17 @@
 		<td>table data</td>
 		<td>include a table data cell</td>
 	</tr>
+		<td><code>ol</code></td>>
+		<td>ordered list</td>>
+		<td>list items using numbers</td>
+	<tr>
+		<td><code>ul</code></td>
+		<td>unordered list</td>
+		<td>list items using bullets form</td>
+	</tr>
 </table>
+</div>
+<div>
 <h2>Inline Elements</h2>
 <table>
 	<tr>
@@ -61,35 +82,47 @@
 	<tr>
 		<td><code>em</code></td>
 		<td>emphasized</td>
+		<td>italise a text semantically</td>
 		<td><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
 		<td><em>technical sophistication</em></td>
-		<tr>
-			<td><code>strong</code></td>
-			<td>strong</td>
-			<td>make strong text</td>
-			<td><code>&lt;strong&gt;create great things&lt;/strong&gt;</code></td>
-			<td><strong>create great things</strong></td>
-		</tr>
-		<tr>
-			<td><code>a</code></td>
-			<td>anchor</td>
-			<td>make hyperlink</td>
-			<td><code>&lt;a&gt;href="https://learnenough.com"&gt;Click to visit learn enough web site&lt;/a&gt;</code></td>
-			<td><a href="https://www.learnenough.com">Click to visit learn enough web site</a></td>
-		</tr>
-		<tr>
-			<td><code>img</code></td>
-			<td>includes an image</td>
-			<td><code>&lt;img&gt; src="images/kitten.jpg" alt="twitter logo"&gt;</code></td>
-			<td><img src="images/small_twitter_logo.png"></td>
-		</tr>
-		<tr>
-			<td><code>code</code></td>
-			<td>formats text to look like source code</td>
-			<td><code>&lt;code&gt;git commit&lt;/code&gt;</code></td>
-			<td><code>git commit</code></td>
-		</tr>
 	</tr>
+	<tr>
+		<td><code>strong</code></td>
+		<td>strong</td>
+		<td>make strong text</td>
+		<td><code>&lt;strong&gt;create great things&lt;/strong&gt;</code></td>
+		<td><strong>create great things</strong></td>
+	</tr>
+	<tr>
+		<td><code>a</code></td>
+		<td>anchor</td>
+		<td>make hyperlink</td>
+		<td><code>&lt;a&gt;href="https://learnenough.com"&gt;Click to visit learn enough web site&lt;/a&gt;</code></td>
+		<td><a href="https://www.learnenough.com">Click to visit learn enough web site</a></td>
+	</tr>
+	<tr>
+		<td><code>img</code></td>
+		<td>image tag</td>
+		<td>includes an image</td>
+		<td><code>&lt;img&gt; src="images/kitten.jpg" alt="twitter logo"&gt;</code></td>
+		<td><img src="images/small_twitter_logo.png" alt="small twitter logo"></td>
+	</tr>
+	<tr>
+		<td><code>code</code></td>
+		<td>code tag</td>
+		<td>formats text to look like source code</td>
+		<td><code>&lt;code&gt;</code>git commit<code>&lt;/code&gt;</code></td>
+		<td><code>git commit</code></td>
+	</tr>
+	<tr>
+		<td><code>li</code></td>
+		<td>list item</td>
+		<td>aids in the listin of items using numbers or bullets depending on <code>ol</code><code>ul</code></td>
+		<td><code>&lt;li&gt;</code>bar of soap<code>&lt;/li&gt;</code><code>&lt;li&gt;</code>Nigeria&lt;/li&gt;</code></td>
+		<td>&#8226; bar of soap &#49; Nigeria </td>
+	</tr>
+	
 </table>
+</div>
 </body>
 </html>
